# zk-thunder

./: .dockerignore  .gitignore  README.md  package.json
.githooks/: pre-push
.github/workflows/: build-local-node-docker.yml  zkthunder-publish-on-tag.yml
contracts/l2-contracts/: hardhat.config.ts
core/lib/dal/: Cargo.toml
core/lib/dal/.sqlx/: query-191da7851e4146a21ba5876e68d268d232a08c7a5a9b755d2f1577b1d330d263.json  query-58b710e2348dc80fba316b328c9baa3fe4dff4b57c4f99a5aaf77c7ce523f7dc.json  query-590183f83e18b725f6d7d1692d55c97b37004626fec09827da432e8848f03127.json  query-998834511dd42cb945ab1f273082139590d0efa4428b47ce588e86bbc5ae5176.json  query-e972feb3cb33b43cc2abf703c30d681207a48ee77d6c5bc49ef41a21e0db16f8.json
core/lib/dal/src/: data_availability_dal.rs  lib.rs
core/lib/l1_contract_interface/: Cargo.toml
core/node/eth_sender/: Cargo.toml
core/node/eth_sender/.sqlx/: query-6bcf611cc99e8c1e5ce816d2d11e12251e851dd04d22f0f48b7581974f6e0efb.json  query-6cfe39ce97144228eb394230266b11de542a883bcadf2d83cc6d37178f3ed89c.json
core/node/eth_sender/src/: aggregated_operations.rs  eth_tx_aggregator.rs  lib.rs  tests.rs
core/node/eth_sender/src/data_availability/: circuit_breaker.rs  error.rs  metrics.rs  mod.rs  worker.rs
docker/local-node/: Dockerfile
docker/zk-node/: Dockerfile  README.md
etc/utils/: package.json
infrastructure/zk/src/: docker.ts
local-setup/: .env.example  README.md  clear.sh  docker-compose.yml  hyperexplorer.json  prometheus.yml  setup-dev.sh  setup.sh  start.sh
local-setup-test/: .env.example  README.md  hardhat.config.ts
local-setup-test/contracts/: Faucet.sol
local-setup-test/scripts/: deploy-faucet.ts  run-many-user.ts  run.ts
local-setup-test/test/: faucet.test.ts  main.test.ts
local-setup/blockscout/: common-frontend.env
local-setup/reth_chaindata/: reth_config
(+8 files in other folders)
